Passing data to templates

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <h1>Home Page</h1>
+    <!-- EJS Interpolation -->
+    <h1>Home Page <%=4+5+1%>
+    </h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, repellat sunt id dolore similique atque, error
         accusantium, quasi tenetur voluptatum odio mollitia dignissimos? Mollitia, necessitatibus optio beatae non ex
         dolore.</p>
